# rigpk-backend

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  refactor_instructions.md  render.yaml  requirements.txt  run_all.py
.superpowers/brainstorm/26107-1776691029/content/: approaches.html  full-layout-v2.html  full-layout.html  label-sharp.html  layout-split.html  picker-modal-v2.html  picker-modal.html  wireframe-labels.html
backend/: config.py  constants.py  main.py
backend/routers/: builds.py  parts.py  prebuilts.py
data/: README.md  czone_all_20260416_005037.json  czone_all_20260416_010547.json  czone_gpus_20260416_001208.json
db/: database.py  schema.sql
docs/superpowers/plans/: 2026-04-18-market-page.md  2026-04-19-specs-filtering.md  2026-04-20-build-pc-page.md
docs/superpowers/specs/: 2026-04-20-build-pc-page-design.md
scrapers/: base_scraper.py  spec_extractor.py
scrapers/amdhouse/: scraper.py
scrapers/czone/: all_scraper.py  gpu_scraper.py
scrapers/junaidtech/: scraper.py
scrapers/pakbyte/: scraper.py
scrapers/prebuilts/: base_prebuilt_scraper.py  run_prebuilts.py
scrapers/prebuilts/redtech/: scraper.py
scrapers/prebuilts/techmatched/: scraper.py
scrapers/prebuilts/zestro/: scraper.py
scrapers/rbtechngames/: scraper.py
scrapers/redtech/: scraper.py
scrapers/techarc/: scraper.py
scrapers/techmatched/: scraper.py
scrapers/zahcomputers/: scraper.py
scripts/: README.md
scripts/migrations/: enrich_specs.py  migrate_add_specs.py
tests/: test_db_integrity.py  test_spec_extractor.py
(+1 files in other folders)
