[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rigpk-backend"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "db*", "scrapers*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
